<resources>
    <string name="app_name">RosterCapture</string>

    <!-- Used multiple places -->
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    <!-- Startup -->
    <string name="welcome_to_rostercapture">Welcome to RosterCapture</string>
    <string name="intro_to_roster_capture">RosterCapture helps teachers learn the names and faces of their students by creating flashcards that can be viewed in AnkiDroid.</string>
    <string name="configure_rostercapture">Configure RosterCapture</string>
    <string name="ok_button">OK</string>
    <!-- AnkiDroid installation -->
    <string name="install_ankidroid_explanation">You need to install the free AnkiDroid Flashcards app in order to use RosterCapture.</string>
    <string name="install_ankidroid">Install AnkiDroid</string>
    <string name="configure_explanation">You need to configure Roster Capture to specify what information to collect from students.</string>
    <!-- AnkiDroid permissions -->
    <string name="permission_explanation">RosterCapture needs your permission to share information with AnkiDroid.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permissions_rejection">You declined to grant RosterCapture the required permission to share data with AnkiDroid. If you would like to do so now, you can rerun the app, but Android may not allow us to ask again, in which case you will need to uninstall and reinstall RosterCapture.</string>
    <!-- AnkiDroid decks -->
    <string name="anki_deck_name_conflict"><![CDATA[<p>Normally, RosterCapture stores cards in an AnkiDroid deck named <b>Roster</b>. You already have a deck with that name.</p><p>You may choose to use this deck or another one.</p>"]]></string>
    <string name="deck_name_label">Deck name</string>
    <string name="use_deck_button">Use deck</string>

    <!-- Field Configuration -->
    <string name="solicit_field_info">Specify which types of information you would like to collect and if you would like to rename the prompts.</string>
    <string name="rename_button">Rename</string>
    <string name="required_button">Required</string>
    <string name="optional_button">Optional</string>
    <string name="not_used_button">Not Used</string>
    <string name="save_configuration_button">Save Configuration</string>
    <string name="configuration_saved">Configuration saved</string>

    <!-- Select Course -->
    <string name="loading">Loading…</string>
    <string name="no_courses_found">No courses found.</string>
    <string name="gear_icon_content_description">gear icon</string>
    <string name="select_a_course">Select a course</string>

    <!-- Tips -->
    <string name="create_first_course_tip">Create your first course with the + button.</string>
    <string name="delete_course_tip">Tip: To delete a course, long press it.</string>

    <!-- Delete Course -->
    <string name="delete_course_confirmation">Do you really want to delete %1$s?</string>

    <!-- Add Course -->
    <string name="add_course">Add Course</string>
    <string name="crn_prompt">CRN (unique identifier)</string>
    <string name="course_id_prompt">Course ID (e.g., CS 1000)</string>
    <string name="course_name_prompt">Course Name</string>

    <!-- Add Student -->
    <string name="add_student_header">Student Information</string>
    <!-- Recordings -->
    <string name="microphone_icon_content_description">Microphone icon</string>
    <string name="record_name_request">Please record your name.</string>
    <string name="stop_recording">Stop recording</string>
    <string name="re_record_name_button">Re-record name</string>
    <string name="failed_to_stop_recording">Failed to stop recording</string>
    <string name="failed_to_start_recording">Failed to start recording</string>
    <!-- Photo -->
    <string name="camera_icon_description">Camera icon</string>
    <string name="captured_selfie_description">Captured selfie</string>
    <string name="retake_photo_button">Retake</string>
    <!-- Pronouns -->
    <string name="feminine_pronouns">she/her/hers</string>
    <string name="masculine_pronouns">he/him/his</string>
    <string name="gender_neutral_pronouns">they/them/theirs</string>
    <string name="other_pronouns_prompt">other (please specify)</string>
    <string name="please_specify_pronouns_prompt">Please specify</string>
    <!-- Actions -->
    <string name="clear_button">Clear</string>
    <string name="exit_button">Exit</string>
    <string name="please_complete_required_fields">Please complete required fields (indicated with %1$s).</string>
    <string name="student_saved_successfully">Student saved successfully!</string>
    <string name="failed_to_save_student">Failed to save student</string>

    <!-- Failure -->
    <string name="error_indicator_content_description">error indicator</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="exit_app_button">Exit App</string>
    <string name="restart_app_button">Restart App</string>
    <string name="duplicate_crn_error">A course with this CRN already exists</string>

    <!-- UpdateChecker -->
    <string name="update_available">Update Available! 🎉</string>
    <string name="version_is_now_available">Version %1$s is now available!</string>
    <string name="current_version">Current version: %1$s</string>
    <string name="what_s_new">What\'s new:</string>
    <string name="update_button">Update</string>
    <string name="not_now_button">Not now</string>
    <string name="skip_button">Skip</string>
    <string name="skip_confirmation">Version %1$s will be skipped</string>
    <string name="download_title">RosterCapture Update</string>
    <string name="download_description">Downloading latest version…</string>
    <string name="download_started">Download started.</string>
    <string name="download_failed">Unable to download. Please try manually.</string>

    <!-- Options Menu -->
    <string name="options">options</string>
    <string name="about_title">About RosterCapture</string>
    <string name="about_message"><![CDATA[
    © 2025 Ellen Spertus<br>
    Version %1$s<br>
    <a href="https://github.com/ellenspertus/rostercapture">Source Code</a><br>
    <a href="https://github.com/espertus/roster-capture/blob/main/README.md">Documentation</a><br>
    <a href="https://github.com/espertus/roster-capture/tree/main?tab=readme-ov-file#credits">Licenses</a><br>
    <br>
]]></string>
    <string name="version_is_available">Version %1$s is available.</string>
    <string name="you_have_the_latest_version">You have the latest version.</string>
    <string name="see_update_info_button">See Update Info</string>
    <string name="courses_content_description">Courses</string>
</resources>